--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,18 @@
   "description": "\"Pizzaria Backend\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "author": "harshith.pendyala",
+  "author": "riyac31",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "nodemon": "^3.0.1"
   }
 }
